--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 // true to enable false to disable. 🌟
 AUTO_STATUS_SEEN=true
 REJECT_CALL=false
-MODE=private
-WELCOME=false
+MODE=public
+WELCOME=true
 AUTO_READ=false
 AUTO_TYPING=false
 AUTO_RECORDING=false
-ALWAYS_ONLINE=false
+ALWAYS_ONLINE=true
 AUTO_BLOCK=true
-AUTO_REACT=false
+AUTO_REACT=true
 // true pou activé false pour désactiver. 🌟
